--- a/package.json
+++ b/package.json
@@ -7,27 +7,37 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint 'src/**/*.+(js|ts|jsx|tsx)'",
-    "format": "prettier --write 'src/**/*.+(js|ts|jsx|tsx)'"
+    "format": "prettier --write 'src/**/*.+(js|ts|jsx|tsx)'",
+    "proxy": "http://localhost:3001"
   },
   "dependencies": {
+    "ahooks": "^3.7.5",
+    "antd": "^5.3.2",
+    "axios": "^1.3.4",
+    "classnames": "^2.3.2",
     "immer": "^9.0.19",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "dotenv": "^16.0.3",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "http-proxy-middleware": "^2.0.6",
     "husky": "^8.0.3",
     "prettier": "^2.8.4",
+    "sass": "^1.59.3",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
