--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.3.2",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
     "immer": "^9.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
