--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "proxy": "http://localhost:3001"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "ahooks": "^3.7.5",
     "antd": "^5.3.2",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "immer": "^9.0.19",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@types/path-browserify": "^1.0.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
