--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite --mode development",
+    "mock": "nodemon _server/index.mjs",
     "build:dev": "tsc && vite build --mode development",
     "build:test": "tsc && vite build --mode test",
     "build": "tsc && vite build --mode production",
@@ -23,12 +24,14 @@
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0",
-    "styled-components": "^5.3.9"
+    "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@types/koa": "^2.13.6",
+    "@types/koa-router": "^7.4.4",
+    "@types/mockjs": "^1.0.7",
     "@types/path-browserify": "^1.0.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -36,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "chalk": "^5.2.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
@@ -43,9 +47,13 @@
     "eslint-plugin-react": "^7.32.2",
     "http-proxy-middleware": "^2.0.6",
     "husky": "^8.0.3",
+    "koa": "^2.14.1",
+    "koa-router": "^12.0.0",
+    "mockjs": "^1.1.0",
     "prettier": "^2.8.4",
     "sass": "^1.59.3",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
-  }
+  },
+  "type": "module"
 }
