--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,3 @@
-REACT_APP_BASE_URL='https://dev-questionare.ainuo5213.cn'
-REACT_APP_MOCK_URL='https://mock.presstime.cn/mock'
-REACT_APP_MOCK_PROJECT_ID='641b02a8493bda3c69bd71ba'
-REACT_APP_USE_MOCK=true
+VITE_API_BASE_URL='https://dev-questionare.ainuo5213.cn'
+VITE_API_MOCK_URL='http://localhost:3001'
+VITE_API_USE_MOCK=true
