--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build": "tsc && vite build --mode production",
     "preview": "vite preview",
     "lint": "eslint 'src/**/*.+(js|ts|jsx|tsx)'",
-    "format": "prettier --write 'src/**/*.+(js|ts|jsx|tsx)'",
-    "proxy": "http://localhost:3001"
+    "format": "prettier --write 'src/**/*.+(js|ts|jsx|tsx)'"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
@@ -48,6 +47,7 @@
     "http-proxy-middleware": "^2.0.6",
     "husky": "^8.0.3",
     "koa": "^2.14.1",
+    "koa-cors": "^0.0.16",
     "koa-router": "^12.0.0",
     "mockjs": "^1.1.0",
     "prettier": "^2.8.4",
