--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "ahooks": "^3.7.5",
     "antd": "^5.3.2",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
-    "immer": "^9.0.19",
+    "immer": "^10.0.1",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.9.0",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
