--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "immer": "^10.0.1",
+    "lodash": "^4.17.21",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,6 +35,7 @@
     "@commitlint/config-conventional": "^17.4.4",
     "@types/koa": "^2.13.6",
     "@types/koa-router": "^7.4.4",
+    "@types/lodash": "^4.14.195",
     "@types/mockjs": "^1.0.7",
     "@types/path-browserify": "^1.0.0",
     "@types/react": "^18.0.27",
