--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "redux": "^4.2.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xss": "^1.0.14"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
