--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 VITE_API_BASE_URL='https://dev-questionare.ainuo5213.cn'
 VITE_API_MOCK_URL='http://localhost:3001'
 VITE_API_USE_MOCK=true
+VITE_QRCODE_HOST='http://localhost:3000'
