--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "recharts": "^2.7.2",
     "redux": "^4.2.1",
     "redux-undo": "^1.0.1",
     "uuid": "^9.0.0",
